Updated the BDSigner that does not require modification to the JDK Jarsigner-- Addresses issue #48.
Reviewed by chihiro_saito
Tested by billf and jaya_h


git-svn-id: https://svn.java.net/svn/hdcookbook~svn@205 e5771d8f-0841-e040-ffdb-cc069419ffcf